@@ -1,3 +1,11 @@
+2007-02-16  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/app/controllers/login_controller.rb 
+	(LoginController::akismet_report): Change: When you SPAM report to Akismet, trackback.spam is 1. To the contrary, When you HAM report to Akismet, trackback.spam is 0.
+	(LoginController::delete_trackback): Change to apply, when you check/uncheck spam checkbox in manage_trackback.
+	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_delete_trackback): Change to check.
+	* donrails/test/fixtures/trackbacks.yml (second_trackback): Add to apply these changes.
+
 2007-02-16  Akira TAGOH  <at@gclab.org>
 
 	* upgrade_1_6.postgresql.sql: correct constraint for don_rbls.
